--- a/components/menu/menu.module.scss
+++ b/components/menu/menu.module.scss
@@ -2,6 +2,7 @@
   min-height: 80px;
   display: flex;
   align-items: center;
+  position: sticky;
   justify-content: center;
   .underline {
     display: flex;
