--- a/components/menu/menu.module.scss
+++ b/components/menu/menu.module.scss
@@ -1,9 +1,13 @@
 .wrapper {
   min-height: 80px;
+  top: 0%;
+  position: fixed;
   display: flex;
   align-items: center;
-  position: sticky;
+  transition: 0.3s ease;
+  width: 100%;
   justify-content: center;
+  z-index: 1;
   .underline {
     display: flex;
     border-bottom: 1px solid #e7e5d6;
@@ -101,4 +105,9 @@
       }
     }
   }
+}
+
+.wrapperFixed {
+  background-color: #f5f3e6;
+  opacity: 0.9;
 }
