--- a/components/molecules/NavbarList/navbarlist.module.scss
+++ b/components/molecules/NavbarList/navbarlist.module.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   list-style-type: none;
-  margin-right: 80px;
+  margin-right: 9 0px;
   li {
     margin-left: 30px;
     margin-right: 30px;
