--- a/components/views/home/home.module.scss
+++ b/components/views/home/home.module.scss
@@ -1,12 +1,10 @@
 .wrapper {
   display: flex;
-  justify-content: center;
   width: 100%;
+  height: 100%;
   align-items: center;
-  flex-grow: 1;
   position: relative;
   padding-top: 10px;
-  margin-top: 120px;
   padding-bottom: 50px;
   .image {
     margin-left: 160px;
