--- a/components/organisms/HomeDescription/homedescription.module.scss
+++ b/components/organisms/HomeDescription/homedescription.module.scss
@@ -19,8 +19,9 @@
       font-weight: 600;
     }
     :last-child {
+      color: rgb(88, 88, 88);
       word-wrap: break-word;
-      max-width: 300px;
+      max-width: 360px;
     }
   }
   .buy {
@@ -33,12 +34,11 @@
     color: #011901;
     font-size: 4rem;
     font-weight: 500;
-    overflow: hidden;
     position: relative;
     .flower {
       position: absolute;
-      bottom: -5px;
-      right: 90px;
+      top: 5px;
+      right: 50px;
     }
     .headTitleGreen {
       color: #001d01;
