--- a/components/atoms/Buttons/GreenButton/button.module.scss
+++ b/components/atoms/Buttons/GreenButton/button.module.scss
@@ -1,7 +1,8 @@
+@import "../../../../styles/colors.scss";
 .btn {
-  background-color: #00b302;
+  background-color: $green;
   font-family: "Montserrat", sans-serif;
-  border: 1px solid #00b302;
+  border: 1px solid $green;
   color: white;
   border-radius: 18px;
   color: white;
