--- a/components/atoms/Buttons/OrangeButton/button.module.scss
+++ b/components/atoms/Buttons/OrangeButton/button.module.scss
@@ -1,3 +1,4 @@
+@import "../../../../styles/colors.scss";
 .btn {
   color: white;
   margin-right: 5px;
@@ -9,8 +10,8 @@
   justify-content: center;
   align-items: center;
   padding-top: 15px;
-  padding-left: 44px;
-  padding-right: 44px;
+  padding-left: 24px;
+  padding-right: 24px;
   padding-bottom: 15px;
   transition: 0.1s ease;
   font-size: 1.3rem;
@@ -18,7 +19,7 @@
     margin-left: 10px;
     padding: 5px;
     font-size: 2rem;
-    background-color: #fff741;
+    background-color: $yellow;
     color: #fb5a00;
     border-radius: 50px;
     transition: 0.1s ease;
