--- a/components/templates/template.module.scss
+++ b/components/templates/template.module.scss
@@ -9,7 +9,8 @@
     margin-top: 120px;
     flex-grow: 1;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    flex-direction: column;
   }
 }
