--- a/components/views/home/home.module.scss
+++ b/components/views/home/home.module.scss
@@ -1,11 +1,13 @@
+@import "../../../styles/colors.scss";
 .wrapper {
   display: flex;
   width: 100%;
   height: 100%;
   align-items: center;
   position: relative;
-  padding-top: 10px;
+  padding-top: 80px;
   padding-bottom: 140px;
+  flex-grow: 1;
   .image {
     margin-left: 10px;
     width: 23vw;
@@ -14,7 +16,7 @@
     align-items: center;
     padding-left: 80px;
     padding-right: 80px;
-    background-color: #fff742;
+    background-color: $yellow;
     border-radius: 50%;
     border: 1px solid white;
     position: relative;
