--- a/components/molecules/ShopWelcomeDescription/shopwelcomedescription.module.scss
+++ b/components/molecules/ShopWelcomeDescription/shopwelcomedescription.module.scss
@@ -4,9 +4,9 @@
   font-size: 2.5rem;
   font-weight: 500;
   i {
-    color: $lightOrange;
+    color: $green;
   }
   a {
-    color: $lightOrange;
+    color: $green;
   }
 }
