--- a/components/atoms/Product/product.module.scss
+++ b/components/atoms/Product/product.module.scss
@@ -6,7 +6,7 @@
   flex-direction: column;
   margin-left: 35px;
   margin-right: 35px;
-  justify-content: center;
+  justify-content: flex-start;
   margin-top: 20px;
   .info {
     display: flex;
