--- a/components/atoms/Product/product.module.scss
+++ b/components/atoms/Product/product.module.scss
@@ -58,6 +58,20 @@
   margin-right: 35px;
   justify-content: flex-start;
   margin-top: 20px;
+  .productImg {
+    border-radius: 5px;
+    transition: 0.3s ease;
+    overflow: hidden;
+    img {
+      transition: 0.3s ease;
+      width: 150px;
+    }
+  }
+  .productImg:hover {
+    img {
+      transform: scale(1.1);
+    }
+  }
   .info {
     display: flex;
     align-items: center;
@@ -66,6 +80,7 @@
       display: flex;
       justify-content: flex-end;
       color: $orange;
+      margin-left: 5px;
       svg {
         transition: 0.1s ease;
       }
