--- a/components/organisms/CartSummary/cartsummary.module.scss
+++ b/components/organisms/CartSummary/cartsummary.module.scss
@@ -1,3 +1,4 @@
+@import "../../../styles/colors.scss";
 .wrapper {
   margin-left: 40px;
   display: flex;
@@ -6,5 +7,92 @@
   .summaryHead {
     font-size: 1.8rem;
     margin-bottom: 10px;
+  }
+  a {
+    color: $green;
+    font-weight: 500;
+    border-bottom: 1px solid $green;
+  }
+  .checkout {
+    width: 100%;
+    button {
+      width: 100%;
+      margin-top: 5px;
+    }
+  }
+  .total {
+    width: 100%;
+    display: flex;
+    :first-child {
+      color: rgb(71, 71, 71);
+    }
+    :last-child {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      flex-grow: 1;
+      color: $green;
+      font-weight: 600;
+    }
+    margin-bottom: 15px;
+  }
+  .summary {
+    font-size: 1.4rem;
+    width: 100%;
+    padding-bottom: 15px;
+    margin-bottom: 15px;
+    border-top: 1px solid gray;
+    border-bottom: 1px solid gray;
+    .summaryColumn {
+      padding-top: 15px;
+      display: flex;
+      :first-child {
+        font-size: 1.2rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: rgb(71, 71, 71);
+      }
+      :last-child {
+        display: flex;
+        flex-grow: 1;
+        font-weight: 500;
+        justify-content: flex-end;
+        align-items: flex-end;
+      }
+    }
+  }
+  .promocodeWrapper {
+    margin-top: 10px;
+    width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin-bottom: 20px;
+    .promocode {
+      border: 1px solid black;
+      min-height: 15px;
+      display: flex;
+      padding: 7px;
+      border-radius: 5px;
+      font-size: 1rem;
+      input {
+        background-color: transparent;
+        border: 0px solid white;
+        border-bottom: 1px solid black;
+        flex-grow: 1;
+        outline: none;
+        font-size: 1rem;
+        font-family: "Montserrat", sans-serif;
+        font-weight: 500;
+        text-transform: uppercase;
+      }
+      :last-child {
+        padding-left: 10px;
+        padding-right: 8px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+    }
   }
 }
