--- a/components/molecules/CartProduct/cartproduct.module.scss
+++ b/components/molecules/CartProduct/cartproduct.module.scss
@@ -73,3 +73,11 @@
     }
   }
 }
+
+.quantity2 {
+  margin-left: 25px;
+  display: flex;
+  flex-grow: 1;
+  justify-content: flex-end;
+  align-items: flex-end;
+}
