--- a/components/organisms/CheckoutSteps/styles/login.module.scss
+++ b/components/organisms/CheckoutSteps/styles/login.module.scss
@@ -1,6 +1,7 @@
 .wrapper {
   margin-top: 55px;
   text-align: center;
+  padding-bottom: 100px;
   .head {
     font-weight: 500;
     font-size: 2rem;
