--- a/components/views/home/home.module.scss
+++ b/components/views/home/home.module.scss
@@ -1,11 +1,14 @@
 @import "../../../styles/colors.scss";
 .wrapper {
   display: flex;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   align-items: center;
+  justify-content: center;
   position: relative;
   padding-top: 80px;
+  margin-left: 90px;
+  margin-right: 180px;
   padding-bottom: 140px;
   flex-grow: 1;
   .image {
@@ -33,5 +36,50 @@
   }
   .pros {
     margin-left: 80px;
+  }
+}
+
+@media (max-width: 1580px) {
+  .wrapper {
+    flex-direction: column;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-bottom: 500px;
+    .image {
+      position: absolute;
+      margin-left: 0px;
+      width: 400px;
+      transform: translate(250px, 200px);
+    }
+  }
+}
+
+@media (max-width: 1400px) {
+  .wrapper {
+    flex-direction: column;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-bottom: 500px;
+    .image {
+      position: absolute;
+      margin-left: 0px;
+      width: 400px;
+      transform: translate(150px, 300px);
+    }
+  }
+}
+
+@media (max-width: 1250px) {
+  .wrapper {
+    flex-direction: column;
+    margin-left: 0px;
+    margin-right: 0px;
+    padding-bottom: 500px;
+    .image {
+      position: absolute;
+      margin-left: 0px;
+      width: 400px;
+      transform: translate(50px, 300px);
+    }
   }
 }
