--- a/components/molecules/FooterPlants/footerplants.module.scss
+++ b/components/molecules/FooterPlants/footerplants.module.scss
@@ -5,3 +5,10 @@
   align-items: center;
   flex-direction: row;
 }
+
+@media (max-width: 750px) {
+  .footerPlants {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
+}
