--- a/components/molecules/NavbarList/navbarlist.module.scss
+++ b/components/molecules/NavbarList/navbarlist.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   list-style-type: none;
-  margin-right: 9 0px;
+  margin-right: 90px;
   li {
     margin-left: 30px;
     margin-right: 30px;
@@ -118,12 +118,15 @@
   }
 }
 
-@media (max-width: 1050px) {
+.xyz {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   .subpageList {
+    margin-right: 0px;
     li {
-      margin-left: 15px;
-      margin-right: 15px;
-      font-size: 1.1rem;
+      margin-left: 5px;
+      margin-right: 5px;
     }
   }
 }
