--- a/components/molecules/ShopFilters/shopfilters.module.scss
+++ b/components/molecules/ShopFilters/shopfilters.module.scss
@@ -29,3 +29,12 @@
     }
   }
 }
+
+@media (max-width: 525px) {
+  .wrapper {
+    text-align: center;
+    .sideFilters {
+      text-align: center;
+    }
+  }
+}
