--- a/components/organisms/HomeDescription/homedescription.module.scss
+++ b/components/organisms/HomeDescription/homedescription.module.scss
@@ -49,3 +49,85 @@
     }
   }
 }
+
+@media (max-width: 1000px) {
+  .homeDescription {
+    margin-right: 220px;
+    .priceStart {
+      font-size: 1.2rem;
+    }
+    .headTitle {
+      font-size: 3rem;
+      .flower {
+        top: 0px;
+        right: 20px;
+      }
+    }
+  }
+  .buy {
+    transform: scale(0.8) translate(-30px, -30px);
+  }
+}
+
+@media (max-width: 750px) {
+  .homeDescription {
+    margin-right: 0px;
+    .priceStart {
+      font-size: 1.2rem;
+    }
+    .headTitle {
+      font-size: 3rem;
+      .flower {
+        top: 0px;
+        right: 20px;
+      }
+    }
+  }
+  .buy {
+    transform: scale(0.8) translate(-30px, -30px);
+  }
+}
+
+@media (max-width: 505px) {
+  .homeDescription {
+    margin-right: 0px;
+    .priceStart {
+      padding-top: 10px;
+      font-size: 1rem;
+    }
+    .headTitle {
+      font-size: 2.2rem;
+      .flower {
+        top: -10px;
+        right: 0px;
+      }
+    }
+  }
+  .buy {
+    transform: scale(0.6) translate(-60px, -70px);
+  }
+}
+
+@media (max-width: 480px) {
+  .homeDescription {
+    margin-right: 0px;
+    .priceStart {
+      margin-left: 10px;
+      padding-top: 5px;
+      font-size: 0.8rem;
+    }
+    .headTitle {
+      margin-left: 15px;
+      font-size: 1.4rem;
+      .flower {
+        width: 25px;
+        height: 25px;
+        top: -0px;
+        right: 5px;
+      }
+    }
+  }
+  .buy {
+    transform: scale(0.6) translate(-60px, -70px);
+  }
+}
