--- a/components/organisms/Navbar/menu.module.scss
+++ b/components/organisms/Navbar/menu.module.scss
@@ -33,3 +33,37 @@
     padding-right: 15px;
   }
 }
+
+.desktop {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.mobile {
+  display: none;
+}
+@media (max-width: 1000px) {
+  .desktop {
+    display: none;
+  }
+  .underline {
+    width: 100%;
+    display: flex;
+  }
+  .mobile {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    :first-child {
+      margin-right: 20px;
+    }
+  }
+}
+
+.warning {
+  font-weight: 500;
+  font-size: 0.8rem;
+  width: 200px;
+  text-align: center;
+}
