--- a/components/organisms/Shop/shop.module.scss
+++ b/components/organisms/Shop/shop.module.scss
@@ -20,6 +20,18 @@
   }
 }
 
+@media (max-width: 470px) {
+  .wrapper {
+    margin-top: 30px;
+  }
+}
+
+@media (max-width: 400px) {
+  .wrapper {
+    margin-top: 10px;
+  }
+}
+
 @media (max-width: 525px) {
   .wrapper {
     flex-direction: column;
