--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,6 +24,14 @@ p {
   padding: 0;
 }
 
+#__next {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .MuiSlider-colorSecondary {
   color: #00b302 !important;
 }
