--- a/components/molecules/FooterPlants/footerplants.module.scss
+++ b/components/molecules/FooterPlants/footerplants.module.scss
@@ -8,7 +8,14 @@
 
 @media (max-width: 750px) {
   .footerPlants {
+    margin-left: 20px;
     flex-direction: row;
     flex-wrap: wrap;
+  }
+}
+
+@media (max-width: 561px) {
+  .footerPlants {
+    margin: 0px auto 0px auto;
   }
 }
