--- a/components/molecules/NavbarList/navbarlist.module.scss
+++ b/components/molecules/NavbarList/navbarlist.module.scss
@@ -122,11 +122,50 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  align-items: center;
+  padding-left: 40px;
+  padding-top: 20px;
+  .icons {
+    margin-left: 10px;
+  }
   .subpageList {
     margin-right: 0px;
+    align-items: center;
     li {
       margin-left: 5px;
       margin-right: 5px;
+    }
+  }
+}
+
+@media (max-width: 460px) {
+  .xyz {
+    ul {
+      li {
+        font-size: 0.9rem;
+      }
+    }
+    .icons {
+      margin-left: 0px;
+      margin-top: 5px;
+      .basket {
+        font-size: 0.6rem;
+        padding: 5px;
+        padding-left: 5px;
+        padding-right: 5px;
+        width: 70px;
+        margin-left: 10px;
+        svg {
+          width: 16px;
+          height: 16px;
+        }
+      }
+    }
+    button {
+      font-size: 0.9rem;
+      padding: 5px;
+      padding-left: 10px;
+      padding-right: 10px;
     }
   }
 }
