--- a/components/organisms/CartSummary/cartsummary.module.scss
+++ b/components/organisms/CartSummary/cartsummary.module.scss
@@ -69,3 +69,19 @@
     margin-bottom: 20px;
   }
 }
+
+@media (max-width: 880px) {
+  .wrapper {
+    margin-left: 0px;
+    margin-top: 40px;
+    align-items: flex-start;
+    .total {
+      :last-child {
+        align-items: flex-start;
+      }
+    }
+  }
+}
+
+@media (max-width: 550px) {
+}
