--- a/components/organisms/Navbar/menu.module.scss
+++ b/components/organisms/Navbar/menu.module.scss
@@ -7,6 +7,7 @@
   align-items: center;
   transition: 0.3s ease;
   width: 100%;
+  background-color: #f5f3e6;
   justify-content: center;
   z-index: 10;
   .underline {
@@ -15,6 +16,8 @@
     padding-left: 50px;
     padding-right: 50px;
     align-items: center;
+    z-index: 2;
+    background-color: #f5f3e6;
     padding-bottom: 20px;
     padding-top: 20px;
     justify-content: center;
@@ -24,7 +27,6 @@
 
 .wrapperFixed {
   background-color: $wheat;
-  opacity: 0.9;
 }
 
 @media (max-width: 1340px) {
@@ -66,4 +68,46 @@
   font-size: 0.8rem;
   width: 200px;
   text-align: center;
+}
+
+.navMobile {
+  background-color: transparent;
+  position: fixed;
+  top: 89px;
+  z-index: 2;
+  left: 0%;
+  width: 100%;
+  height: 500px;
+  animation: 0.3s ease upSlide;
+  .mobileList {
+    padding-right: 50px;
+    border-bottom-right-radius: 15px;
+    padding-bottom: 15px;
+    border-bottom: 1px solid #e7e5d6;
+    background-color: #f5f3e6;
+    border-right: 1px solid lightgray;
+    border-bottom: 1px solid lightgray;
+    ul {
+      padding: 0px;
+      margin: 0px;
+    }
+  }
+}
+
+@keyframes fade {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes upSlide {
+  0% {
+    transform: translateY(-200%);
+  }
+  100% {
+    transform: translateY(0%);
+  }
 }
