--- a/components/templates/template.module.scss
+++ b/components/templates/template.module.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100%;
   min-width: 100%;
 
   .content {
@@ -12,5 +12,13 @@
     justify-content: flex-start;
     align-items: center;
     flex-direction: column;
+  }
+}
+
+@media (max-width: 500px) {
+  .wrapper {
+    .content {
+      margin-top: 90px;
+    }
   }
 }
