--- a/components/molecules/CheckoutDetails/checkoutdetails.module.scss
+++ b/components/molecules/CheckoutDetails/checkoutdetails.module.scss
@@ -3,7 +3,6 @@
   margin-bottom: 100px;
   margin-right: 35px;
   margin-left: 35px;
-  width: 500px;
   .head {
     font-size: 1.5rem;
     display: flex;
@@ -33,5 +32,25 @@
     border-top: 1px solid lightgray;
     padding-top: 15px;
     margin-top: 15px;
+  }
+}
+
+@media (max-width: 402px) {
+  .details {
+    margin-left: 20px;
+    margin-right: 20px;
+    .head {
+      font-size: 1.2rem;
+    }
+  }
+}
+
+@media (max-width: 602px) {
+  .details {
+    margin-left: 20px;
+    margin-right: 20px;
+    .head {
+      font-size: 1.2rem;
+    }
   }
 }
