--- a/components/molecules/ShopSort/shopsort.module.scss
+++ b/components/molecules/ShopSort/shopsort.module.scss
@@ -50,5 +50,18 @@
 @media (max-width: 525px) {
   .wrapper {
     margin-top: 30px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+  }
+  .sort {
+    display: none !important;
+  }
+}
+
+@media (max-width: 805px) {
+  .sort {
+    display: none !important;
   }
 }
