--- a/components/organisms/CartSummary/cartsummary.module.scss
+++ b/components/organisms/CartSummary/cartsummary.module.scss
@@ -75,6 +75,9 @@
     margin-left: 0px;
     margin-top: 40px;
     align-items: flex-start;
+    .promocodeWrapper {
+      padding-left: 0px;
+    }
     .total {
       :last-child {
         align-items: flex-start;
@@ -83,5 +86,63 @@
   }
 }
 
-@media (max-width: 550px) {
+@media (max-width: 500px) {
+  .wrapper {
+    margin-left: 0px;
+    padding-right: 30px;
+    padding-left: 30px;
+    margin-top: 40px;
+    .summaryHead {
+      font-size: 1.4rem;
+    }
+    .summary {
+      font-size: 1rem;
+      padding-bottom: 15px;
+      margin-bottom: 15px;
+      .summaryColumn {
+        padding-top: 15px;
+        :first-child {
+          font-size: 1rem;
+          display: flex;
+        }
+        :last-child {
+          display: flex;
+        }
+      }
+    }
+    .checkout {
+      transform: scale(0.8);
+    }
+  }
+}
+
+@media (max-width: 353px) {
+  .wrapper {
+    margin-left: 0px;
+    padding-right: 40px;
+    padding-left: 40px;
+    margin-top: 40px;
+    .summaryHead {
+      font-size: 1rem;
+    }
+    .promocodeWrapper {
+      width: 80%;
+    }
+    .summary {
+      font-size: 0.8rem;
+      padding-bottom: 15px;
+      margin-bottom: 15px;
+      .summaryColumn {
+        flex-grow: none;
+        padding-top: 15px;
+        :first-child {
+          font-size: 1rem;
+          display: flex;
+        }
+      }
+    }
+    .checkout {
+      transform: scale(0.8);
+    }
+  }
 }
